--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
+*,::before,::after{
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+}
+
 .container{
   width: 1280px;
   margin: 0 auto;
+  background-color: #fff;
 }
 
 h2{
@@ -47,9 +57,10 @@ a:hover{
 }
 
 .tabs-content{
-  width: 1000px;
+  width: 100%;
   height: 400px;
   margin: auto;
+  padding: 0 150px;
   overflow-y: scroll;
 }
 
