--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,21 @@
 body{
   margin: 0;
   padding: 0;
+  background-color: silver;
 }
 
 .container{
   width: 1280px;
   margin: 0 auto;
-  background-color: #fff;
 }
 
 h2{
   display: flex;
   justify-content: center;
   font-size: 42px;
+  background-color: silver;
+  margin: 0;
+  padding: 40px 0;
 }
 
 .menu{
@@ -36,7 +39,7 @@ a{
   transition: linear opacity .2s;
 }
 
-.active{
+.active-link{
   opacity: 1;
 }
 
@@ -61,24 +64,40 @@ a:hover{
   height: 400px;
   margin: auto;
   padding: 0 150px;
-  overflow-y: scroll;
+  overflow-y: auto;
+  background-color: #fff;
+
 }
 
-.main{
-  z-index: 3;
-}
-
-.desserts{
-  z-index: 2;
+.menu-list{
   display: none;
 }
 
-.drinks{
-  z-index: 1;
-  display: none;
+.menu-list.active{
+  display: block;
 }
 
 .price{
   margin: 50px 0 20px 0;
+  color:lime;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: rgb(255, 251, 4);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(82, 204, 98);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(26, 156, 48);
+}
